--- a/web/src/game/locales/en/translation.json
+++ b/web/src/game/locales/en/translation.json
@@ -10,6 +10,6 @@
   "Score": "SCORE",
   "Settings": "Settings",
   "Shop": "Shop",
-  "Tap to jump": "Tap\nto jump",
+  "Tap to jump": "Tap\nto jump!",
   "You have all the fish": "You have all the fish!"
 }
